--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="author-fonction">Dévéloppeur full stack</div>
             <div class="author-phone">+223 77 43 19 13</div>
             <div class="author-email">
-                <a href="mailto:contact@apprenez-a-coder.fr">boureimamaiga67@</a>gmail.com
+                <a href="mailto:boureimamaiga67@gmail.com">boureimamaiga67@gmail.com</a>
             </div>
         </div>
     </header>
